<resources>
    <string name="app_name">projetGrard</string>
    <string name="app_title">Qcm</string>
    <string name="validate">Valider</string>
    <string name="stop">Stopper</string>
    <string name="scores_title">Scores</string>
    <string name="note_average_title">Note moyenne</string>
    <string name="note_quiz_title">Note questionnaire %1$s</string>
    <string name="see_scores_title">Voir vos scores</string>
    <string name="reset_scores_title">Réinitialiser les scores</string>
    <string name="create_quiz_title">Créer des questionnaires</string>
    <string name="quit_app_title">Quitter l’application</string>
    <string name="select_quiz_title">Sélectionnez le questionnaire que vous souhaitez lancer</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="password_incorrect">Mot de passe incorrect</string>
    <string name="title_password_admin">Mot de passe admin</string>
    <string name="msg_password_admin">Veuillez entrer le mot de passe admin</string>
    <string name="error_load_quiz">Erreur lors de la récupération du questionnaire</string>
    <string name="progress_text">Question %1$d/%2$d</string>
    <string name="error_no_answer">Vous n\'avez pas sélectionné de réponse</string>
    <string name="quiz_already_played">Ce quiz à déjà été joué.</string>
    <string name="scores_reset">Réinitialisation des scores</string>
    <string name="error_create_directory">Impossible de créer le dossier qui contient les questionnaires</string>
    <string name="error_create_file">Impossible de créer un fichier pour un questionnaire</string>
    <string name="add_answer">Ajouter une réponse</string>
    <string name="add_question">Ajouter une question</string>
    <string name="add_quiz">Ajouter un questionnaire</string>
    <string name="question">Question</string>
    <string name="category">Catégorie</string>
    <string name="answer">Réponse</string>
    <string name="toast_answer">" réponse(s)"</string>
    <string name="good_answer">Bonne réponse</string>
    <string name="toast_no_answer">Aucun réponse n\'a été saisie</string>
    <string name="toast_empty_answer">La réponse saisie est vide</string>
    <string name="toast_empty_question">La question saisie est vide</string>
    <string name="toast_empty_category">La catégorie saisie est vide</string>
    <string name="toast_empty_quiz">Il y a aucune question saisie</string>
    <string name="toast_no_correct_answer">Il n\'y a aucune bonne réponse dans la question.</string>
    <!--  Chaînes servant uniquement à afficher un aperçu dans l'éditeur de layout  -->
    <string name="example_category_text">Catégorie du questionnaire</string>
    <string name="example_question_text">Question posée au joueur</string>
    <string name="example_average_note">0/20</string>
</resources>